syntax = "proto3";

package kvstore;

message SetRequest {
    string key = 1;
    string value = 2;
}

message GetRequest {
    string key = 1;
}

message SetResponse {
    bool success = 1;
}

message GetResponse {
    optional string value = 1; // 'optional' in proto3 means the field might not be set
    bool found = 2;
}

// Optional: A wrapper message to encapsulate requests and responses
message Command {
    oneof request {
        SetRequest set = 1;
        GetRequest get = 2;
    }
    oneof response {
        SetResponse set_response = 3;
        GetResponse get_response = 4;
    }
}